[Saran/Anu] fix the jumping issue on quadrant btn group

--- a/src/stylesheets/_header.scss
+++ b/src/stylesheets/_header.scss
@@ -1,21 +1,29 @@
 header {
-  width: 100%;
   text-align: center;
-  margin-bottom: 15px;
+
+  .radar-title, .buttons-group, #alternative-buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    align-content: space-between;
+  }
 
   .radar-title {
     background-color: $grey-light;
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding: 30px 0;
+
     display: table;
     margin: auto;
     width: 100%;
 
     .radar-title__text {
+
       display: table-cell;
       width: 70%;
+
       text-align: left;
-      padding-left: 140px;
+      padding-left: 10%;
 
       h1 {
         font-size: 55px;
@@ -28,6 +36,9 @@ header {
     }
 
     .radar-title__logo {
+      flex: 0 0 30%;
+      margin-left: auto;
+
       width: 30%;
       display: table-cell;
       vertical-align: middle;
@@ -40,31 +51,22 @@ header {
         vertical-align: middle;
         width: 34%;
       }
-
     }
   }
 
 
+  .quadrant-btn--group, .multiple-sheet-button-group {
+    text-align: left;
+    padding-left: 10%;
+  }
+
+  .print-radar-btn, .search-box {
+    margin-left: auto;
+    margin-right: 10%;
+  }
+
   .buttons-group {
-    width: 100%;
-    display: table;
     padding: 15px 0 25px;
-
-    .quadrant-btn--group {
-      width: 70%;
-      display: table-cell;
-      text-align: left;
-      padding-left: 10%;
-    }
-
-    .print-radar-btn {
-      width: 30%;
-      display: table-cell;
-
-      .button {
-        margin-right: 2%;
-      }
-    }
   }
 
   .home-link {
@@ -81,10 +83,8 @@ header {
   .button {
     font-size: $baseFont;
     text-transform: capitalize;
-    display: inline-block;
     margin-right: 20px;
     border-radius: 2px;
-    line-height: 1em;
     padding: 10px 20px;
     cursor: pointer;
     transition: all .2s ease-out;
@@ -123,8 +123,6 @@ header {
     }
 
     &.full-view {
-      display: inline;
-      width: 70%;
 
       &.first {
         background-color: $green;
@@ -149,59 +147,41 @@ header {
   }
 
   #alternative-buttons {
-    display: table;
-    width: 100%;
     margin-bottom: 50px;
 
-    .multiple-sheet-button-group {
-      display: table-cell;
-      text-align: left;
-      width: 60%;
-      padding-left: 10%;
-
-      .highlight {
-        border-bottom: none;
-        font-weight: bold;
-      }
-
-      p {
-        font-size: 16px;
-        font-weight: 700;
-        margin-top: 0;
-        margin-bottom: 10px;
-      }
-
-      .multiple-sheet-button {
-        margin-right: 10px;
-      }
-
+    .highlight {
+      border-bottom: none;
+      font-weight: bold;
     }
 
-    .search-box {
-      display: table-cell;
-      width: 40%;
-      text-align: center;
+    p {
+      font-size: 16px;
+      font-weight: 700;
+      margin-top: 0;
+      margin-bottom: 10px;
+    }
 
-      .search-radar {
-        line-height: initial;
-        display: inline-block;
-        border: 1px solid #aaa;
-        background-color: inherit;
-        background-image: url("/images/search-logo-2x.svg");
-        background-repeat: no-repeat;
-        background-position: 10px;
-      }
+    .multiple-sheet-button {
+      margin-right: 10px;
+    }
 
-      input {
-        padding-left: 35px;
-        width: 50%;
-      }
+    .search-radar {
+      border: 1px solid #aaa;
+      background-color: inherit;
+      background-image: url("/images/search-logo-2x.svg");
+      background-repeat: no-repeat;
+      background-position: 10px;
+    }
+
+    input {
+      padding-left: 35px;
+      width: 275px;
     }
   }
 }
 
 .ui-autocomplete {
-  width: 286px !important;
+  width: 275px !important;
 
   .ui-menu-item {
     white-space: normal;
